--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-    "name": "natours",
-    "version": "1.0.0",
-    "main": "app.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon app.js",
-        "lint": "eslint '**/*.js'"
-    },
-    "author": "",
-    "license": "ISC",
-    "description": "",
-    "dependencies": {
-        "express": "^4.21.2"
-    },
-    "devDependencies": {
-        "@eslint/js": "^9.23.0",
-        "eslint": "^9.23.0",
-        "globals": "^16.0.0",
-        "prettier": "3.5.3"
-    }
+  "name": "natours",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js",
+    "lint": "eslint '**/*.js'"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.23.0",
+    "eslint": "^9.23.0",
+    "globals": "^16.0.0",
+    "prettier": "3.5.3"
+  }
 }
